--- a/src/components/calendarView/reservationWindow/reservationWindow.css
+++ b/src/components/calendarView/reservationWindow/reservationWindow.css
@@ -3,7 +3,7 @@
     top: 3rem;
     width: calc(100% - 44rem);
     padding: 10rem 20rem;
-    background-color: rgba(0,0,0,0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     vertical-align: middle;
     text-align: -webkit-center;
 }
