--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,4 @@
 .pageContent {
-    margin-top: 4rem;
-    padding: 0 2rem;
-    overflow-y: auto;
-}
-
-.pageContainer {
-}
+  margin-top: 4rem;
+  padding: 0 2rem;
+  overflow-y: auto; }
