--- a/src/components/calendarView/calendar.css
+++ b/src/components/calendarView/calendar.css
@@ -1,13 +1,11 @@
 .roomSide {
-    display: inline-block;
-    vertical-align: top;
-    width: 10rem;
-    margin-top: 3.7rem;
-}
+  display: inline-block;
+  vertical-align: top;
+  width: 10rem;
+  margin-top: 4.7rem; }
 
 .calendarSide {
-    display: inline-block;
-    width: calc(100% - 10rem);
-    position: relative;
-    overflow-x: auto;
-}
+  display: inline-block;
+  width: calc(100% - 10rem);
+  position: relative;
+  overflow-x: auto; }
