--- a/src/components/calendarView/room/room.scss
+++ b/src/components/calendarView/room/room.scss
@@ -1,14 +1,22 @@
 @import "../../../colors.scss";
 
-
 .roomOuter {
-    padding: 0.7rem;
+  padding: 0.7rem;
 }
 
 .roomInner {
-    width: 100%;
-    height: 4rem;
-    background-color: $main_mint;
-    display: inline-block;
-    border-radius: 3px;
+  width: 100%;
+  height: 4rem;
+  background-color: $main_mint;
+  display: inline-block;
+  border-radius: 3px;
+}
+
+.roomInfo {
+  padding: 0.5rem;
+}
+
+.roomLabel {
+  font-size: 0.8rem;
+  display: block;
 }
