Add bootstrap and new controlers to input

--- a/src/components/calendarView/calendarGrid/calendarGrid.css
+++ b/src/components/calendarView/calendarGrid/calendarGrid.css
@@ -13,7 +13,8 @@
   background-color: #d3d3d354; }
 
 .calendarCell {
-  border-right: 1px solid lightgray; }
+  border-right: 1px solid lightgray;
+  text-align: center; }
 
 .calendarMonth {
   text-align: center;
