--- a/src/components/calendarView/roomConfirmWindow/roomConfirmWindow.scss
+++ b/src/components/calendarView/roomConfirmWindow/roomConfirmWindow.scss
@@ -1,11 +1,18 @@
+@import "../../../colors.scss";
+
 .roomConfirmationWindow {
   position: fixed;
   top: 3rem;
   right: 0;
   height: calc(100% - 3rem);
-  width: 30rem;
+  width: 40rem;
+  padding: 0.5rem;
   background-color: white;
-  border: 1px solid black;
+  box-shadow: -2px 8px 17px 0px $main_gray;
+}
+
+.content {
+  margin-top: 5rem;
 }
 
 .reservationForm {
@@ -16,13 +23,28 @@
   text-align: initial;
 }
 
-.roomConfirmationFormLabel {
-  display: inline-block;
-  width: 5rem;
-  margin-right: 0.5rem;
-  vertical-align: top;
+.exitButton {
+  position: absolute;
+  top: 0.5rem;
+  right: 0.5rem;
 }
 
-.textAreaConfirmationRoom {
-  resize: none;
+.rowField {
+  margin: 0.5rem;
 }
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  height: 5rem;
+  width: 100%;
+  margin-left: -0.5rem;
+  background-color: $main_gray;
+}
+
+.save {
+  position: absolute;
+  top: calc(50% - 1.7rem);
+  right: 1rem;
+}
+
