--- a/src/components/headerComponent.css
+++ b/src/components/headerComponent.css
@@ -1,7 +1,13 @@
 .headerComponent {
   position: fixed;
-  height: 3rem;
+  height: 4rem;
   background: #cccbc6;
   width: 100%;
   top: 0;
-  z-index: 10; }
+  z-index: 10;
+  padding: 0 2rem;
+  border-bottom: 4px solid #A9B7C0; }
+
+.tabs {
+  position: absolute;
+  bottom: 0; }
