--- a/src/components/headerComponent.scss
+++ b/src/components/headerComponent.scss
@@ -2,9 +2,16 @@
 
 .headerComponent {
   position: fixed;
-  height: 3rem;
+  height: 4rem;
   background: $main_powder;
   width: 100%;
   top: 0;
   z-index: 10;
+  padding: 0 2rem;
+  border-bottom: 4px solid $main_gray;
+}
+
+.tabs{
+  position: absolute;
+  bottom: 0;
 }
