--- a/src/components/utils/myNormal/myNormal.scss
+++ b/src/components/utils/myNormal/myNormal.scss
@@ -18,3 +18,10 @@
   border: 1px solid #A9B7C0;
 }
 
+.valueMyNormal{
+  color: gray;
+  position: relative;
+  top: -0.2rem;
+  padding: 0.4em 0.5em;
+}
+
