--- a/src/components/calendarView/reservationRect/reservationrect.scss
+++ b/src/components/calendarView/reservationRect/reservationrect.scss
@@ -1,5 +1,5 @@
 .reservationRect {
-  font-size: 1.3rem;
+  font-size: 1.4rem;
   font-weight: bold;
   cursor: move;
   background-color: red;
@@ -7,4 +7,11 @@
   border-radius: 3px;
   text-align: center;
   margin-top: 2rem;
+  padding: 1rem;
+  color: lightgray;
+
+  &.error {
+    color: red;
+    border: 1px solid red;
+  }
 }
