--- a/src/components/calendarView/reservationWindow/reservationWindow.css
+++ b/src/components/calendarView/reservationWindow/reservationWindow.css
@@ -18,38 +18,28 @@
   color: white;
   cursor: default; }
 
-.reservationFormContent {
-  margin-top: 3.5rem; }
-
 .reservationForm {
   background-color: white;
   padding: 1rem;
   position: relative;
   width: 45rem;
+  height: 51rem;
   text-align: initial; }
-
-.reservationFormLabel {
-  display: inline-block;
-  width: 3rem; }
-
-.reservationFormInput {
-  width: 100%;
-  border: 1px solid #A9B7C0;
-  padding: 0.4em 0.5em;
-  margin-bottom: 0.2rem;
-  position: relative;
-  text-align: initial; }
-
-.reservationFormDate {
-  padding: 0.4em 0.5em;
-  margin-bottom: 0.2rem;
-  width: 12rem; }
-
-.datePickerInner {
-  display: inline-block; }
-
-.datePicker {
-  display: inline-block; }
+  .reservationForm .reservationTabs {
+    margin-top: 4rem;
+    margin-bottom: 1rem; }
+    .reservationForm .reservationTabs .reservationTab {
+      display: inline-block;
+      width: 30%;
+      padding: 0.5rem;
+      text-align: center;
+      border: 1px solid gray;
+      margin-right: 0.2rem;
+      cursor: pointer; }
+      .reservationForm .reservationTabs .reservationTab.activeTab {
+        background-color: #A9B7C0; }
+      .reservationForm .reservationTabs .reservationTab:hover {
+        background-color: #cccbc6; }
 
 .reservationFormSubmit {
   position: relative;
