--- a/src/components/headerComponent.css
+++ b/src/components/headerComponent.css
@@ -7,6 +7,11 @@
   z-index: 10;
   padding: 0 2rem;
   border-bottom: 4px solid #A9B7C0; }
+  .headerComponent .userOptions {
+    float: right; }
+    .headerComponent .userOptions .glyphicon {
+      font-size: 2.5rem;
+      top: 0.5rem; }
 
 .tabs {
   position: absolute;
