--- a/src/components/reservationsView/reservationConfirmWindow/reservationConfirmWindow.scss
+++ b/src/components/reservationsView/reservationConfirmWindow/reservationConfirmWindow.scss
@@ -33,6 +33,34 @@
     padding: 0 1rem;
   }
 
+  .reservationFormLabel {
+    display: inline-block;
+    width: 3rem;
+  }
+
+  .reservationFormInput {
+    width: 100%;
+    border: 1px solid #A9B7C0;
+    padding: 0.4em 0.5em;
+    margin-bottom: 0.2rem;
+    position: relative;
+    text-align: initial;
+  }
+
+  .reservationFormDate {
+    padding: 0.4em 0.5em;
+    margin-bottom: 0.2rem;
+    width: 12rem;
+  }
+
+  .datePickerInner {
+    display: inline-block;
+  }
+
+  .datePicker {
+    display: inline-block;
+  }
+
   .rowContentColumn{
     display: inline-block;
     width: 50%;
