--- a/src/components/reservationsView/reservationsView.scss
+++ b/src/components/reservationsView/reservationsView.scss
@@ -2,3 +2,15 @@
   font-size: 1.2rem;
   width: calc(100% - 60rem);
 }
+
+.emptyReservation {
+  font-size: 1.2rem;
+  width: 60rem;
+  color: gray;
+  padding-top: 5rem;
+  text-align: center;
+  position: fixed;
+  top: 3rem;
+  right: 0;
+  height: calc(100% - 3rem);
+}
