--- a/src/pages/loginPage.scss
+++ b/src/pages/loginPage.scss
@@ -1,2 +1,31 @@
-.loginPage {
+@import "../colors.scss";
+
+.loginHeader {
+  padding: 1rem;
+  text-align: right;
+  background-color: $main_gray;
+  color: white;
+}
+
+.loginRect {
+  text-align: center;
+
+  .loginRectInner{
+    width: 30rem;
+    height: 40rem;
+    background-color: $main_mint;
+    padding: 5rem 1rem;
+    display: table;
+    margin: 0 auto;
+    border-radius: 3px;
+
+    .loginRectNormal{
+      margin-bottom: 1rem;
+    }
+
+    .login{
+      float: right;
+      margin-top: 5rem;
+    }
+  }
 }
